first step to move API endpoints to /api/...
